fix: left-align date/time values on iOS via -webkit-date-and-time-value
iOS ignores text-align on native date/time inputs.
Use ::-webkit-date-and-time-value pseudo-element to force left alignment.

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -4300,6 +4300,11 @@ button.natal-pos__row--clickable {
   text-align: left;
 }
 
+.edit-form-field input[type="date"]::-webkit-date-and-time-value,
+.edit-form-field input[type="time"]::-webkit-date-and-time-value {
+  text-align: left;
+}
+
 .date-input-wrap {
   position: relative;
   width: 100%;
